syntax = "proto3";

option csharp_namespace = "TradeBotCommon";
import "google/protobuf/timestamp.proto";

package common;
/*
enum Reply{
	succeed = 0;
	failure = 1;
}
*/
message DefaultReply{
	//Reply reply = 1;
	string message = 2;
}

message Meta{
	//UserInfo user_info = 1;
	//Config config = 2;
} 
/*
message UserInfo{
	string session_id = 1;
}


*/message Order {
	double quantity = 1;
	double price = 20;
	double fee = 30;
	OrderStatus status = 40;
	OrderType type = 43;
	int32 id = 45;
	google.protobuf.Timestamp last_update_time = 5;
}

/*

message AlgorithmInfo{
    //интервал анализа
	google.protobuf.Timestamp interval = 1;
	//количество точек в интервале (между точками берется среднее)
	int32 point_split_count = 2;
}

message Config{
	//общий баланс на счету 
	double total_balance = 1;
	//доступный процент из общего баланса
	double avaible_balance = 2;
	//сколько мы хотим прибыли получать с контракта
	double required_profit = 3;
	//налоги на слот
	double slot_fee = 4;
	//точный объем контракта
	double contract_value = 5;
	//когда снимать свои ордера с биржы
	double order_update_price_range = 6;
	//информация необходимая для работы алгоритма
	AlgorithmInfo AlgorithmInfo = 7;
}

message Log {
	//когда произошла запись
	google.protobuf.Timestamp when = 1;
	// на каком микросервисе и в каком методе прозошла запись
	string where = 2;
	//сообщение лога
	string log_message = 3;

}
*/
enum OrderStatus {
		open = 0;
		closed = 1;
	}
enum OrderType {
		sell = 0;
		buy = 1;
	}
	